quick  fix for word-wrap issue with edit-column-metadata indicators

--- a/src/main/webapp/css/tdar-bootstrap.css
+++ b/src/main/webapp/css/tdar-bootstrap.css
@@ -250,7 +250,7 @@ table.legend {
 	border: 1px solid #999;
 	margin-right: 5px;
 	bottom: -.15em !important;
-	width: .8em;
+	width: 1em;
 	height: .8em;
 	padding: 0px;
 }
